change the position to fixed for ham menu on smaller screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -284,7 +284,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
+    position: fixed;
     right: 20px;
     top: 50px;
     width: 30px;
